<resources>
    <string name="fb_app_id">509486789397968</string>
    <string name="app_name">Fine artist</string>
    <string name="submit">Submit</string>

    <string name="introductory_1">Train yourself online</string>
    <string name="introductory_2">Get certified for your training</string>
    <string name="introductory_3">The only place for true artists</string>

    <string name="no_internet_message">No internet connection</string>
    <string name="update_play_services">Please update Play Services</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="empty_view_title">No entries for now!</string>
    <string name="empty_view_description">Please check back again</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="market_price">Market Price</string>
    <string name="search">Search</string>
    <string name="vyom_rate">Rate</string>
    <string name="tap_to_enter_price">Tap to enter price</string>

    <string name="enter_loading_point">Enter loading point</string>
    <string name="enter_destination">Enter destination</string>
    <string name="enter_trip_destination">Enter trip destination</string>
    <string name="could_not_connect">Could not connect to server</string>
    <string name="skip">Skip login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="find_load_tab_title">My Courses</string>
    <string name="recommended_load_tab_title">Recommended</string>
    <string name="active_load_tab_title">Updates</string>
    <string name="from">From :</string>
    <string name="recent_search">Recent searches</string>
    <string name="update">Update</string>
    <string name="to">To :</string>
    <string name="trip_history">Trip history</string>
    <string name="track_your_ride">Track your ride</string>
    <string name="user_img_trans_code">userImgTrans</string>
    <string name="change_language">Update address</string>
    <string name="logout_string">Logout</string>
    <string name="tnc">Terms</string>
    <string name="about_us">About us</string>
    <string name="help">Help</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="logging_out">Logging out. Please wait...</string>
    <string name="terms_conditions_title">Terms and conditions</string>
    <string name="login">Login</string>
    <string name="login_to_continue">Please login to continue</string>
    <string name="signingup_wait">Verifying credentials!\nPlease wait...</string>
    <string name="err_occurred">An error occurred. Please try again.</string>
    <string name="email_required_text">OOPS!\n We couldn\'t fetch email.</string>
    <string name="email_required_hint">Email</string>
    <string name="retry">Retry</string>
    <string name="provide_api_key">Please provide api key</string>
    <string name="zero_results">No results found</string>
    <string name="source_destination_cannot_be_same">Loading point and destination should be different</string>
    <string name="address_line_1">Address line 1*</string>
    <string name="address_line_2">Address line 2*</string>
    <string name="address_line_3">City</string>

    <string name="address_line_1_hint">e.g. Building/House no</string>
    <string name="address_line_2_hint">e.g. Street/Locality</string>
    <string name="address_line_3_hint">e.g. Gurgaon</string>

    <string name="address_line_1_cannot_be_empty">Address line 1 cannot be empty</string>
    <string name="address_line_2_cannot_be_empty">Address line 2 cannot be empty</string>

    <string name="confirm">Confirm</string>
    <string name="pick_up_address">Pick up address:</string>
    <string name="pick_upaddress">Pick up address</string>
    <string name="load_details">Load details:</string>

    <string name="address_updated_successfully">Address updated successfully</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="empty_number">Please enter a valid number</string>

    <string name="categories">Categories</string>
    <string name="courses">Courses</string>
    <string name="creators">Creators</string>
    <string name="faqs">FAQs</string>
    <string name="start_typing">Start typing...</string>
    <string name="no_results_found">No results found</string>

</resources>
