<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/height48"
                android:src="@mipmap/logo" />

            <LinearLayout
                android:id="@+id/text_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <in.fine.artist.home.utils.views.TextViewMedium
                    android:id="@+id/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:padding="@dimen/size10"
                    android:gravity="top|center_horizontal"
                    android:textSize="@dimen/size22"
                    android:textColor="@color/white"/>

                <in.fine.artist.home.utils.views.TextViewRegular
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/introductory_1"
                    android:padding="@dimen/size10"
                    android:gravity="top|center_horizontal"
                    android:textSize="@dimen/size16"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="@dimen/size10">

                <LinearLayout
                    android:id="@+id/facebook_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/size5"
                    android:orientation="horizontal"
                    android:background="@drawable/facebook_button_feedback">

                    <in.fine.artist.home.utils.views.IconView
                        android:layout_width="@dimen/action_bar_height"
                        android:layout_height="@dimen/action_bar_height"
                        android:textSize="@dimen/drawer_iconview_size"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/ic_facebook"
                        />

                    <in.fine.artist.home.utils.views.TextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_with_facebook"
                        android:textSize="@dimen/size14"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/google_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/size5"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:background="@drawable/google_button_feedback">

                    <in.fine.artist.home.utils.views.IconView
                        android:layout_width="@dimen/action_bar_height"
                        android:layout_height="@dimen/action_bar_height"
                        android:textSize="@dimen/drawer_iconview_size"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/ic_google"
                        />

                    <in.fine.artist.home.utils.views.TextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_with_google"
                        android:textSize="@dimen/size14"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <in.fine.artist.home.utils.views.TextViewRegular
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="@dimen/size14"
        android:textColor="@color/white"
        android:padding="@dimen/size10"
        android:visibility="gone"
        android:clickable="true"
        android:layout_gravity="right|top"
        android:textAllCaps="true"/>
</FrameLayout>